# rust_practice

./: .gitignore  Cargo.toml  README.md
algorithms/: Cargo.toml  README.md
algorithms/src/: lib.rs  main.rs
algorithms/src/algorithms/: backspace_string_compare.rs  circular_queue.rs  find_all_duplicates_in_an_array.rs  hanota.rs  last_stone_weight.rs  majority_element.rs  maximum_units_on_a_truck.rs  mod.rs  number_of_good_pairs.rs  palindrome_number.rs  plus_one.rs  product_of_array_except_self.rs  remove_all_adjacent_duplicates_in_string.rs  remove_duplicates_from_sorted_array_ii.rs  reorganize_string.rs  reverse_integer.rs  running_sum_of_1d_array.rs  sort_characters_by_frequency.rs  sum_of_subarray_minimums.rs  word_search_ii.rs
algorithms/src/deque/: mod.rs
algorithms/src/pretree/: mod.rs
algorithms/tests/: lib.rs
algorithms/tests/deque/: mod.rs
bevy_combat/: Cargo.toml
bevy_combat/src/: constants.rs  lib.rs  main.rs  math_util.rs  movement.rs
bevy_combat/src/ai/: aggression.rs  idle.rs  mod.rs  movement.rs
bevy_combat/src/combat/: attack.rs  damage.rs  effects.rs  mod.rs  mortal.rs
bevy_combat/src/fx/: animated.rs  beams.rs  death.rs  mod.rs
bevy_combat/src/game/: mod.rs
bevy_combat/src/templates/: weapons.rs
bevy_heart/: Cargo.toml
bevy_heart/src/: main.rs
candlestick/: Cargo.toml
candlestick/examples/: basic_draw.rs
candlestick/src/: candle_set.rs  chart.rs  chart_render.rs  lib.rs  main.rs  yaxis.rs
clox/: Cargo.toml
clox/src/: lib.rs  main.rs
clox/src/chunk/: mod.rs  op.rs
clox/src/front/: compile.rs  mod.rs  precedence.rs  scanner.rs  token.rs
clox/src/value/: mod.rs  object.rs
clox/src/vm/: mod.rs
clox/test/: closure.lox  fib.lox  fn.lox  for.lox  if.lox  logical.lox  while.lox
game-2048-tui/: Cargo.toml
game-2048-tui/src/: app.rs  event.rs  game.rs  main.rs
guess_world/: Cargo.toml  index.html
guess_world/src/: awords.txt  main.rs  scoreboard.rs
guess_world/src/board/: board.rs  cell.rs  mod.rs  row.rs
guess_world/src/keyboard/: keyboard.rs
hecto/: Cargo.toml
hecto/src/: document.rs  editor.rs  filetype.rs  light.rs  main.rs  row.rs  terminal.rs
invaders/: Cargo.toml
invaders/src/: enemy.rs  main.rs  player.rs
learn/: Cargo.toml
learn/src/: lib.rs  main.rs
learn/src/chapter20/: 404.html  hello.html  mod.rs  thread_pool.rs  web_server.rs
learn/src/esc/: mod.rs
my-redis/: Cargo.toml  foo.txt
my-redis/examples/: client.rs  echo-server-copy.rs  hello-redis.rs  mini_tokio.rs  server.rs
my-redis/src/: main.rs
nbody/: Cargo.toml
nbody/src/: lib.rs  main.rs
pandemic_simulation/: Cargo.toml
pandemic_simulation/src/: main.rs
pathfinding/: Cargo.toml
pathfinding/examples/: jps.rs  terminal.rs  waves.rs
pathfinding/src/: lib.rs
platformer/: Cargo.toml
platformer/src/: main.rs  texture.rs  util.rs
platformer/src/state/: app_state.rs  gpu_state.rs  lcd_filiter.rs  mod.rs
rathole/: Cargo.toml  build.rs
rathole/src/: cli.rs  client.rs  config.rs  config_watcher.rs  helper.rs  lib.rs  main.rs  protocol.rs  server.rs
rathole/src/transport/: mod.rs  tcp.rs
rathole/tests/config_test/: client.toml  server.toml
ray_tracing_in/: Cargo.toml
ray_tracing_in/src/: bvh.rs  camera.rs  hittable.rs  lib.rs  main.rs  material.rs  perlin.rs  ray.rs  rectangle.rs  sphere.rs  texture.rs  vec.rs
ray_tracing_in_one_weekend/: Cargo.toml
ray_tracing_in_one_weekend/src/: camera.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  vec.rs
rlox/src/: lib.rs  main.rs
rlox/src/ast/: expr.rs  mod.rs  stmt.rs
rlox/src/error/: mod.rs
rlox/src/expr/: mod.rs
rlox/src/function/: mod.rs
rlox/src/interpreter/: class.rs  environment.rs  function.rs  mod.rs  value.rs
rlox/src/parser/: mod.rs
rlox/src/resolver/: mod.rs
rlox/src/scanner/: mod.rs  scanner.rs
rlox/src/token/: mod.rs  token.rs
rlox/test/: class.lox  fibonacci.lox  fn.lox  fun.lox  if.lox  inheritance.lox  lambda.lox  local_function.lox  logical_operator.lox  loop.lox  return.lox  scope.lox  while.lox
scratchapixel/: Cargo.toml
scratchapixel/cpp/: gemory.cpp  raytracer.cpp
scratchapixel/examples/: pers_proj.rs  pinhole.rs  ray_render.rs
scratchapixel/src/: lib.rs  main.rs  matrix.rs  ray_tracer.rs  vec.rs
simple_fd/: Cargo.toml
simple_fd/src/: app.rs  config.rs  exit_codes.rs  filesystem.rs  filetypes.rs  main.rs  output.rs  walk.rs
talent_plan/: Cargo.toml
talent_plan/project-1/: Cargo.toml
talent_plan/project-1/src/: lib.rs
talent_plan/project-1/src/kvs/: mod.rs
talent_plan/project-1/tests/: serde.rs
talent_plan/src/: lib.rs
talent_plan/src/kvs/: error.rs  mod.rs
talent_plan/src/redis/cli/: cli.rs
talent_plan/src/redis/ser/: ser.rs
talent_plan/tests/: log_test.rs  serde.rs  tests.rs
telent_plan/project-1/src/kvs/: mod.rs
varint/: Cargo.toml
varint/src/: lib.rs  rowio.rs  zigzag.rs
vulkano/: Cargo.toml
vulkano/src/: compute_operations.rs  fractal.rs  graphics_pipeline.rs  image_creation.rs  main.rs  windowing.rs
wgpu/: Cargo.toml
wgpu/pipeline/: Cargo.toml
wgpu/pipeline/src/: main.rs
wgpu/src/: main.rs
wgpu/tutorial3-pipeline/: Cargo.toml
wgpu/tutorial4-buffers/: Cargo.toml
wgpu/tutorial4-buffers/src/: main.rs
wgpu/tutorial5-textures/: Cargo.toml
wgpu/tutorial5-textures/src/: main.rs
wgpu/tutorial6-camera-and-uniform-buffers/: Cargo.toml  build.rs
wgpu/tutorial6-camera-and-uniform-buffers/src/: main.rs  shader.vert  texture.rs
wgpu/tutorial7-instancing/: Cargo.toml
wgpu/tutorial7-instancing/src/: main.rs
wgpu/tutorial8-depthbuffer/: Cargo.toml
wgpu/tutorial8-depthbuffer/src/: main.rs  texture.rs
wgpu/tutorial9-model_loading/: Cargo.toml  build.rs
wgpu/tutorial9-model_loading/res/: cube.mtl
wgpu/tutorial9-model_loading/src/: main.rs  model.rs  shader.vert  texture.rs
wgpu8.0/tutorial10_woring_with_lights/: Cargo.toml  build.rs
wgpu8.0/tutorial10_woring_with_lights/src/: main.rs  model.rs  shader.wgsl  texture.rs
