[package]
name = "rust_practice"
version = "0.1.0"
authors = ["pj_zhong <pj_zhong@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
   "algorithms",
   "learn",
   #"vulkano", vulkano and wgpu has depedencies conflicts, activity only one of the two
   "wgpu/*",
]