[package]
name = "guess_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
gloo-events = "0.1.1"
rand = "0.8"
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = ["console"]}
yew = "~0.19"

