[package]
name = "rathole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
clap = { version = "3.0", features = ["derive"] }
lazy_static = "1.4"
anyhow = "1.0"

[build-dependencies]
vergen = "6.0"
anyhow = "1.0"
