[package]
name = "rathole"
version = "0.1.0"
edition = "2021"

[features]
default = ["server", "client"]

server = []
client = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
clap = { version = "3.0", features = ["derive"] }
lazy_static = "1.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
async-trait = "0.1"
socket2 = "0.4"
sha2 = "0.10"
backoff = { version="0.3", features=["tokio"] }
bincode = "1"
rand = "0.8"

[build-dependencies]
vergen = "6.0"
anyhow = "1.0"