[package]
name = "simple_fd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
normpath = "0.3"
ignore = "0.4.3"
num_cpus = "1.8"
once_cell = "1.8.0"

[dependencies.clap]
version = "2.31.3"
features = ["suggestions", "color", "wrap_help"]