[package]
name = "kvs"
version = "0.1.0"
authors = ["pj_zhong <pj_zhong@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bson = "1.2"
clap = "2.33.3"
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
log = "0.4.0"
env_logger = "0.9.0"


[dev-dependencies]
serde_json = "1.0"
assert_cmd = "0.11.0"
predicates = "1.0.0"

[[bin]]
name = "cli"
path = "src/redis/cli/cli.rs"

[[bin]]
name = "ser"
path = "src/redis/ser/ser.rs"