[package]
name = "vulkano"
version = "0.1.0"
authors = ["pj_zhong <pj_zhong@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.21.0"
vulkano-shaders = "0.18"
vulkano-win = "0.21"
winit = "0.24"
image = "0.23"