[package]
name = "tutorial7-instancing"
version = "0.1.0"
authors = ["pj_zhong <pj_zhong@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24"
env_logger = "0.7"
futures = "0.3"
bytemuck = {version = "1.4", features = ["derive"]}
image = "0.23"
anyhow = "1.0"
cgmath = "0.18"

[dependencies.wgpu]
version = "0.7"
features = ["vulkan-portability"]

[build-dependencies]
shaderc = "0.7.2"
glob = "0.3"
fs_extra = "1.1"
anyhow = "1.0"